# rust-vs-go-workshop

./: README.md  go-vs-rust.md
go/: main.go
go-2/: go.mod  main.go
go-3/: main.go
go-4/views/: weather.html
go/go-1/: main.go
go/go-2/: main.go
go/go-3/: main.go
go/go-3/views/: index.html
go/go-4/: main.go
go/go-5/: go.mod  main.go
go/go-6/: .env  go.sum  init.sql  main.go
go/go-6/views/: stats.html
rust/rust-1/src/: main.rs
rust/rust-2/: Cargo.toml
rust/rust-2/src/: main.rs
rust/rust-3/: Cargo.toml
rust/rust-3/src/: main.rs
rust/rust-3/templates/: index.html  weather.html
rust/rust-4/src/: main.rs
rust/rust-5/: .env  Cargo.toml
rust/rust-5/src/: main.rs
rust/rust-5/templates/: stats.html
rust/rust-6/: Cargo.toml
rust/rust-6/src/: main.rs
