[package]
name = "rust-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
sqlx = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
