[package]
name = "rust-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["headers"] }
base64 = "0.21.4"
http = "0.2.9"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "macros",
    "any",
    "postgres",
] }
tokio = { version = "1.32.0", features = ["full"] }
