[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["headers"] }
base64 = "0.21.4"
http = "0.2.9"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
shuttle-aws-rds = { version = "0.25.0", features = ["postgres"] }
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "macros",
    "any",
    "postgres",
] }
tokio = { version = "1.32.0", features = ["full"] }
